<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Activity.MainActivity">

    <ScrollView
        android:layout_width="442dp"
        android:layout_height="911dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/gradiant_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="900dp"
                android:background="@drawable/gradiant_color_background">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="343dp"
                    android:layout_height="65dp"
                    android:text="@string/get_instant_updates_on_nearby_events_from_concerts_to_festivals"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle=""
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.402"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.741" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="317dp"
                    android:layout_height="307dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.243"
                    app:srcCompat="@drawable/circle" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/shapeableImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"

                    android:layout_margin="8dp"

                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@id/imageView4"
                    app:layout_constraintEnd_toEndOf="@+id/imageView4"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4"
                    app:layout_constraintVertical_bias="1.0"
                    app:shapeAppearanceOverlay="@style/roundedImageRounded"
                    app:strokeWidth="1dp"
                    app:srcCompat="@drawable/phone" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instant_ever_alerts"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.481"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.647" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    android:layout_width="290dp"
                    android:layout_height="46dp"


                    android:background="@drawable/background_button"
                    android:text="@string/next"
                    android:textColor="@color/white"


                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.457"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.863"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>