<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_button"
    tools:context=".Activity.register">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_button"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/grab_your_tickets"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="357dp"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/seerch_edit_background"
                android:ems="10"
                android:hint="  Search shows. . . ."
                android:inputType="text"
                android:text=""
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/view_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:paddingStart="20dp"
                android:textAlignment="center"
                android:text="Make a reminder of your Favourite Upcoming show"
                android:textColor="#DCC925"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="425dp"
                android:layout_height="173dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addreminderbutton"
                    android:layout_width="219dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/gradiant_color_background"
                    android:text="Add Reminder"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/Textview10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_coming_show"
                android:paddingStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="#DCC925"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="181dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="20dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="20dp"

                    android:layout_weight="1"
                    app:srcCompat="@drawable/e4" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="20dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/e6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:backgroundTint="#0E2A50"
                    android:minHeight="48dp"
                    android:text="@string/bns_with_umaria"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/my_primary"
                    android:minHeight="48dp"
                    android:text="@string/nadhagama"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="413dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#BF988888"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:tint="@color/my_primary"
                    app:srcCompat="@drawable/b"
                    tools:ignore="UseAppTint" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/b1" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/b4" />




            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
